# root-core

./: .env.example  .gitignore  =0.3.0  CHANGELOG.md  CONVERSION_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  MODULAR_MONOLITH_GUIDE.md  README.md  RootCore.sln  __init__.py  babel.py  cli.py  docker-compose.kafka.yml  main.py  main_gateway.py  main_gateway_demo.py  messages.pot  pyproject.toml
RootCore/: README.md  RootCore.csproj
RootCore/Bases/: BaseController.cs  BaseRepository.cs  BaseService.cs
RootCore/Configuration/: AppSettings.cs
RootCore/Database/: BaseDbContext.cs  BaseModel.cs
RootCore/Exceptions/: CoreExceptions.cs
RootCore/Response/: Schemas.cs
SampleWebApi/: Program.cs  README.md  SampleWebApi.csproj  SampleWebApi.http  appsettings.json
SampleWebApi/Controllers/: ProductsController.cs
SampleWebApi/Data/: ApplicationDbContext.cs
SampleWebApi/Models/: Product.cs
SampleWebApi/Properties/: launchSettings.json
core/: FieldParser.py  app.py  cli_entry.py  config.py  database.py  database_registry.py  env_manager.py  exceptions.py  logger.py  models.py  module_registry.py  router.py  security.py  security_manager.py
core/bases/: base_command.py  base_middleware.py  base_repository.py  base_router.py  base_seed.py  base_service.py  crud_api.py
core/commands/: app_create_command.py  clean_command.py  command_discovery.py  db_commands.py  db_list_command.py  delete_app_command.py  delete_model_command.py  full_command.py  generate_permissions_command.py  list_apps_command.py  model_command.py  scaffold.py  service_create_command.py  utils.py
core/helpers/: commit_action.py
core/messaging/: __init__.py  event_bus.py  events.py  kafka_client.py
docs/: api-reference.md  api.md  app-commands.md  architecture.md  database-commands.md  database.md  dynamic-auth-class.md  implementation-log-phase1.md  implementation-log-phase2.md  implementation-log-phase4-5.md  index.md  kafka-setup.md  microservices.md  migrations.md  module-structure.md  multi-database-strategy.md  security-cleanup.md  security-manager.md  security-module-refactoring.md
migrations/: env.py
plans/: dynamic_database_plan.md  microservices_plan.md
(+212 files in other folders)
