[project]
name = "core"
version = "0.1.0"
description = "This is the core package for root projects."
authors = [{ name = "Ghaziriyadh", email = "ghazriyadh2@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.urls]
Homepage = "https://github.com/GhaziRiyadh/root-core"
Issues = "https://github.com/GhaziRiyadh/root-core/issues"

[tool.poetry]
packages = [{ include = "core", from = "." }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
