[project]
name = "core"
version = "2.0.0"
description = "This is the core package for root projects."
authors = [{ name = "Ghaziriyadh", email = "ghazriyadh2@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["aiokafka (>=0.12.0,<0.13.0)", "pwdlib (>=0.3.0,<0.4.0)", "pyjwt (>=2.10.1,<3.0.0)", "fastapi[standard] (>=0.122.0,<0.123.0)"]

[project.urls]
Homepage = "https://github.com/GhaziRiyadh/root-core"
Issues = "https://github.com/GhaziRiyadh/root-core/issues"

[tool.poetry]
packages = [{ include = "core", from = "." }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
