[tool.poetry]
name = "core"
version = "2.0.0"
description = "This is the core package for root projects - Modular Monolith Architecture."
authors = ["Ghaziriyadh <ghazriyadh2@gmail.com>"]
readme = "README.md"
packages = [{ include = "core", from = "." }]

[tool.poetry.urls]
Homepage = "https://github.com/GhaziRiyadh/root-core"
Issues = "https://github.com/GhaziRiyadh/root-core/issues"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
sqlmodel = "^0.0.22"
pydantic-settings = "^2.6.0"
pyjwt = "^2.10.1"
pwdlib = {extras = ["argon2"], version = "^0.3.0"}
aiosqlite = "^0.20.0"
fastapi-babel = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
